# universal-clipboard-js

./: CMakeLists.txt  README.md  index.js  package.json
scripts/: build.sh
src/: clipboard.hpp  index.cpp  mac.h  mac.mm  util.hpp
test/: test.js
types/: index.d.ts
